--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.application.name=demo
 # Update to use environment variables as follows:
 # ${VARIABLE_NAME} to fetch the value dynamically from environment variables.
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/counterdb
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://postgres:5432/counterdb
+spring.datasource.username=counteruser
+spring.datasource.password=counterpass
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
